Update Remore control block

--- a/config.json
+++ b/config.json
@@ -4,7 +4,8 @@
     "libs": [
         "robocon.py",
         "gamepad.py",
-        "gamepad_handler.py"
+        "gamepad_handler.py",
+        "remote_control.py"
     ],
     "blocks": [
         "definition.js"
